fix notifications